# energy-dashboard

./: .env  .gitignore  DEMO.md  README.md  alembic.ini  eia-api-swagger.yaml  energy.db  pyproject.toml  requirements.txt  setup.sh
alembic/: env.py
alembic/versions/: 8d8b323fc0f8_adjust_schema.py
app/: __init__.py  config.py  main.py  models.py  routes.py  services.py
app/models/: __init__.py  models.py
app/routes/: routes.py
app/services/: services.py
app/utils/: url_builder.py
docker/: Dockerfile-app  Dockerfile-db  Dockerfile.app  compose.yml
docs/: README.md
energy-dashboard/: README.md  pyproject.toml
energy-dashboard/src/energy_dashboard/: main.py  routes.py  services.py  utils.py
energy-dashboard/src/energy_dashboard/templates/: index.html
environments/prod/: .tfvars  main.tf  variables.tf
src/energy_dashboard/: database.py  main.py  models.py  routes.py  services.py  utils.py
src/energy_dashboard/templates/: base.html  index.html  index.jinja2  layout.jinja2
src/energy_dashboard/templates/partials/: navbar.jinja2  sse.jinja2  streaming_chunk.jinja2
tests/: conftest.py  test_energy_service.py
