[project]
name = "energy-dashboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dtaylor-us", email = "derektaylor.us@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "databases>=0.9.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "aiosqlite>=0.20.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "alembic>=1.13.1",
    "bokeh>=3.4.1",
    "sqlalchemy[asyncio]>=2.0.30",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.5",
]

[tool.rye.scripts]
dev = "uvicorn energy_dashboard.routes:app --reload"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/energy_dashboard"]

[tool.hatch.build.scripts]
energy-dashboard = "energy_dashboard.main:main"
